--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Converts timestamps to seconds and vice versa",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --reporter spec "
+    "test": "mocha --reporter spec",
+    "test-jenkins": "JUNIT_REPORT_PATH=./report.xml mocha --colors --reporter mocha-jenkins-reporter --reporter-options junit_report_name='TimeConverter'"
   },
   "repository": {
     "type": "git",
