chore(Converter): Updated packages | MP
Updated packages

--- a/package.json
+++ b/package.json
@@ -17,25 +17,25 @@
     "timestamp"
   ],
   "author": "Mark Poepping",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/mmpro/ac-timeconverter/issues"
   },
   "homepage": "https://github.com/mmpro/ac-timeconverter#readme",
   "devDependencies": {
-    "ac-conventional-changelog-template": "git+https://github.com/mmpro/ac-conventional-changelog-template.git",
-    "corp-semantic-release": "git+https://github.com/mmpro/corp-semantic-release.git",
-    "cz-customizable": "git+https://github.com/mmpro/cz-customizable.git",
-    "eslint": "^4.5.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.1.1",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "expect": "^1.6.0",
-    "husky": "^0.14.3",
-    "mocha": "^3.5.0",
-    "mocha-jenkins-reporter": "^0.3.8",
+    "ac-conventional-changelog-template": "github:mmpro/ac-conventional-changelog-template",
+    "corp-semantic-release": "github:mmpro/corp-semantic-release",
+    "cz-customizable": "github:mmpro/cz-customizable",
+    "eslint": "^5.16.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "expect": "^24.8.0",
+    "husky": "^1.2.0",
+    "mocha": "^5.2.0",
+    "mocha-jenkins-reporter": "github:mmpro/mocha-jenkins-reporter",
     "mocha-junit-reporter": "^1.13.0",
     "mocha-multi-reporters": "^1.1.4"
   },
